# pencil

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  build.xml  configure.ac  create-packages.sh  pencil-linker.in  pencil-optimizer.in
res/version/: genversion.sh
src/scala/com/arm/carp/pencil/: CallGraph.scala
testsuite/code/: carp-common.h  carp-common.h.in
testsuite/code/pencil/: .gitignore
testsuite/code/pencil/simple/: arrays3.pencil  gcp.pencil  intrinsic-opt.pencil
testsuite/lib/: common.exp  linker.exp  optimizer.exp
testsuite/linker.tests/: run.exp
testsuite/optimizer.tests/: run.exp
